--- a/client/src/components/NavBar/nav-bar.scss
+++ b/client/src/components/NavBar/nav-bar.scss
@@ -3,15 +3,20 @@
 @use "../../styles/typography" as *;
 
 .navbar {
-    background-color: $Aspire-Red;
+    // background-color: $Aspire-Red;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
     height: 4rem;
+    position: sticky;
+    top: 0;
 
     &__logo {
         color: $Aspire-White;
+        border: 5px solid white;
+        padding: 0.5rem;
+        cursor: pointer;
     }
 
     &__links {
