--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -38,11 +38,15 @@
   h3 {
     font-size: 24px;
     margin-bottom: 10px;
+    @include desktop-header-bold;
+    color: $Aspire-White;
   }
 
   p {
     font-size: 14px;
     margin: 0;
-    line-height: 1.6;
+    @include desktop-body;
+    line-height: 1.5rem;
+    color: $Aspire-White;
   }
 }
