--- a/client/src/components/NavBar/nav-bar.scss
+++ b/client/src/components/NavBar/nav-bar.scss
@@ -40,6 +40,9 @@
     height: 100%;
     display: flex;
     align-items: center;
+    @include desktop-header;
+    color: $Aspire-White;
+    font-size: 1rem;
   }
 
   &__link:hover {
