--- a/client/src/components/NavBar/nav-bar.scss
+++ b/client/src/components/NavBar/nav-bar.scss
@@ -11,6 +11,7 @@
   position: sticky;
   top: 0;
   transition: background-color 0.3s ease;
+  width: 100%;
 
   &.navbar-transparent {
     background-color: transparent;
