--- a/client/src/components/MemberTimetable/member-timetable.scss
+++ b/client/src/components/MemberTimetable/member-timetable.scss
@@ -2,7 +2,7 @@
 @use "../../styles/breakpoints" as *;
 @use "../../styles/typography" as *;
 
-.timetable-section {
+.member-timetable-section {
   padding: 2rem;
 
   &__heading {
@@ -10,7 +10,7 @@
   }
 }
 
-.class-timetable {
+.member-class-timetable {
   background-color: $Aspire-White;
   justify-content: center;
   // width: 75%;
@@ -19,21 +19,21 @@
   padding: 1rem 0;
 }
 
-.time-cells {
+.member-time-cells {
   background-color: $Aspire-Red;
   color: $Aspire-White;
   font-size: 14px;
   width: 50px;
 }
 
-.column-headings {
+.member-column-headings {
   background-color: $Aspire-Red;
   color: $Aspire-White;
   font-size: 14px;
   height: 2rem;
 }
 
-.class-name {
+.member-class-name {
   background-color: $Aspire-Grey;
   font-size: 12px;
   width: 75px;
