--- a/client/src/components/ClassTimetable/class-timetable.scss
+++ b/client/src/components/ClassTimetable/class-timetable.scss
@@ -38,8 +38,10 @@
   font-size: 12px;
   width: 6rem;
   height: 4rem;
-  cursor: pointer;
   padding: 0.5rem;
+  &__value {
+    cursor: pointer;
+  }
 }
 
 .class-name p {
