--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -6,15 +6,18 @@
   margin-top: -4rem;
   width: 100vw;
   max-height: 500px;
-// background-image: url("../../Assets/images/Aspire-header.jpg");
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: contain;
+  // background-image: url("../../Assets/images/Aspire-header.jpg");
+  //     background-position: center;
+  //     background-repeat: no-repeat;
+  //     background-size: contain;
   &__image {
     width: 100vw;
     max-height: 500px;
     overflow: hidden;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &--svg {
       width: 100%;
     }
