--- a/client/src/pages/Classes/class-page.scss
+++ b/client/src/pages/Classes/class-page.scss
@@ -16,6 +16,9 @@
     width: 100vw;
     max-height: 300px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &--svg {
       width: 100%;
     }
