--- a/client/src/components/AddClass/add-class.scss
+++ b/client/src/components/AddClass/add-class.scss
@@ -80,6 +80,7 @@
     width: 24px;
     height: 24px;
     margin-bottom: 1.5rem;
+    cursor: pointer;
 
     @include media-tablet {
       margin: 0;
@@ -89,9 +90,10 @@
   &__buttons {
     display: flex;
     align-items: center;
+    margin-top: 2rem;
 
     @include media-tablet {
-      justify-content: flex-end;
+      justify-content: center;
     }
   }
 
@@ -100,7 +102,7 @@
     height: 36px;
     border: 1px solid grey;
     background-color: transparent;
-    border-radius: 20px;
+    cursor: pointer;
     margin-right: 0.5rem;
 
     @include media-tablet {
@@ -115,7 +117,7 @@
     border: none;
     background-color: $Aspire-Red;
     color: $Aspire-White;
-    border-radius: 20px;
+    cursor: pointer;
     margin-left: 0.5rem;
 
     @include media-tablet {
