--- a/client/src/components/AddClass/add-class.scss
+++ b/client/src/components/AddClass/add-class.scss
@@ -8,9 +8,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.25);
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   visibility: hidden;
   opacity: 0;
@@ -34,7 +34,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 10rem;
 
   @include media-desktop {
     background-color: #fff;
@@ -64,7 +63,8 @@
 
   &__title {
     margin-top: 0;
-    padding-bottom: 1.5rem;
+    @include desktop-header-bold;
+    font-size: 1.5rem;
   }
 
   &__text {
@@ -106,7 +106,6 @@
     margin-right: 0.5rem;
 
     @include media-tablet {
-      // width: 15%;
       width: 100px;
     }
   }
@@ -121,7 +120,6 @@
     margin-left: 0.5rem;
 
     @include media-tablet {
-      // width: 15%;
       width: 100px;
     }
   }
@@ -130,7 +128,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // align-items: flex-start;
 }
 
 .input-container {
