--- a/client/src/components/EditClass/edit-class.scss
+++ b/client/src/components/EditClass/edit-class.scss
@@ -2,13 +2,13 @@
 @use "../../styles/breakpoints" as *;
 @use "../../styles/typography" as *;
 
-.class-modal {
+.edit-class-modal {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,14 +17,14 @@
   overflow-y: hidden;
 }
 
-.class-modal--open {
+.edit-class-modal--open {
   visibility: visible;
   opacity: 1;
   transition-delay: 0s;
   overflow-y: hidden;
 }
 
-.class-details {
+.edit-class {
   background-color: #fff;
   padding: 1.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
@@ -40,9 +40,14 @@
     padding: 20px;
     border-radius: 4px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    width: 500px;
+    width: 100%;
     margin: 0 3rem;
     height: auto;
+    margin-top: 11.5625rem;
+  }
+
+  @include media-desktop {
+    margin: 11.5625rem 20rem 0 20rem;
   }
 
   &__box {
@@ -51,29 +56,22 @@
   }
 
   &__content {
-    padding-bottom: 1rem;
     @include media-desktop {
-      padding: 0 4rem 1.5rem 4rem;
+      padding: 0 4rem 1rem 4rem;
     }
   }
 
   &__title {
     margin-top: 0;
-    padding-bottom: 1.5rem;
     @include desktop-header-bold;
     font-size: 1.5rem;
   }
 
   &__text {
     margin-bottom: 1rem;
-    @include desktop-body;
 
     @include media-tablet {
       margin-bottom: 1.5rem;
-    }
-
-    &--bold {
-      @include desktop-body-bold;
     }
   }
 
@@ -92,36 +90,27 @@
   &__buttons {
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
+    margin-top: 2rem;
 
-  &__add {
-    border: none;
-    background-color: $Aspire-Blue;
-    color: white;
-    cursor: pointer;
-    margin-right: 0.5rem;
-    padding: 0.75rem;
-
-    &:hover {
-      background-color: $Aspire-Red;
+    @include media-tablet {
+      justify-content: center;
     }
   }
 
-  &__edit {
+  &__cancel {
     width: 50%;
     height: 36px;
     border: 1px solid grey;
     background-color: transparent;
-    margin-right: 0.5rem;
     cursor: pointer;
+    margin-right: 0.5rem;
 
     @include media-tablet {
       width: 100px;
     }
   }
 
-  &__delete {
+  &__submit {
     width: 50%;
     height: 36px;
     border: none;
@@ -134,4 +123,30 @@
       width: 100px;
     }
   }
+}
+.input-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.input-container {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-container input,
+.input-container textarea,
+.input-container option,
+.input-container select {
+  border-radius: 5px;
+  padding: 0.5rem;
+  @include desktop-body;
+}
+
+.input-container label {
+    padding-right: 1rem;
+    @include desktop-body-bold;
 }
