--- a/client/src/components/ImageGallery/image-gallery.scss
+++ b/client/src/components/ImageGallery/image-gallery.scss
@@ -2,48 +2,12 @@
 @use "../../styles/breakpoints" as *;
 @use "../../styles/typography" as *;
 
-// .image-gallery {
-//     display: flex;
-//     // width: 100%;
-//     overflow: hidden;
-//     flex-wrap: wrap;
-
-//     &__image {
-//         // width: 33%;
-//         height: 350px;
-//     }
-// }
-
 .gallery {
-//   padding-top: 1.5rem;
-//   padding-left: 1rem;
-//   padding-right: 1rem;
   background-color: #fafafa;
-
-  @include media-tablet {
-    // padding: 2.25rem 1.5rem;
-  }
-
-  @include media-desktop {
-    // padding: 2.25rem 4.25rem;
-  }
-
-  // &__title {
-  //   padding-bottom: 1rem;
-  //   @include mobile-section-header;
-
-  //   @include media-tablet {
-  //     padding-bottom: 1.5rem;
-  //     padding-left: 0.75rem;
-  //     padding-top: 0.75rem;
-  //     @include tablet-section-header;
-  //   }
-  // }
 
   &__photos {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
 
     @include media-tablet {
       flex-direction: row;
@@ -52,28 +16,15 @@
   }
 
   &__item {
-    width: 100%;
-    // padding-bottom: 1rem;
+    width: 25%;
 
     @include media-tablet {
       width: 25%;
       padding: 1vw;
     }
+
+    &--middle {
+      width: 50%;
+    }
   }
 }
-
-.middle {
-    width: 50%;
-}
-
-// .gallery__item {
-//   filter: gray;
-//   -webkit-filter: grayscale(1);
-//   -webkit-transition: all 0.8s ease-in-out;
-// }
-
-// .gallery__item:hover {
-//   filter: none;
-//   -webkit-filter: grayscale(0);
-//   -webkit-transform: scale(1.05);
-// }
